--- a/src/styles/components/footer.css
+++ b/src/styles/components/footer.css
@@ -38,5 +38,6 @@
     left: 0 !important;
     right: 0 !important;
     z-index: 50;
+    background: transparent !important;
   }
 }
